sa-master-01/security2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security2-demo
spec:
  containers:
  - name: default
    image: sa-master-01.vclass.local:443/busybox:1
    args:
    - /bin/sh
    - -c
    - sleep infinity
  - name: readonly
    image: sa-master-01.vclass.local:443/busybox:1
    args:
    - /bin/sh
    - -c
    - sleep infinity
    securityContext:
      readOnlyRootFilesystem: true
